# megadepth

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.ci  CMakeLists.txt.static  CMakeLists.txt.statlib  CMakeLists.txt.windows  Dockerfile  Dockerfile.osxcross  Dockerfile.run  Dockerfile.windows  LICENSE.txt  README.md  VERSION  atomicops.h  bamcount.cpp  bc  bc_runner  bcd  bcd_runner  build.sh  build_dynamic_no_container.sh  build_megadepth.sh  build_no_container.sh  build_no_container_hbb.sh  build_no_container_macos.sh  build_no_container_windows.sh  build_no_container_xcross.sh  bwam.cpp  countdecimaldigit.h  countlut.hpp  create_docker_to_run_megadepth.sh  digitslut.h  docker_build.sh  entry.sh  get_docopt.sh  get_htslib.sh  get_libBigWig.sh  get_libdeflate.sh  get_zlib.sh  (+14 more)
.github/workflows/: build.yml
junctions/: process_jx_output.sh
sample_aggregation/: .Snakefile.paste.swp  Snakefile.paste  aggregate.sh  find_new_files.sh  group_sums.sh  paste_sums.sh  remove_extra_samples.sh
tests/: TCGA_BLCA_A13J.vcf.gz_cg_cov5.bw.bg.gz.chr1.60379.62229.bw  build_test_data.sh  bw.all_overlap_types.test_input.bw  bw.all_overlap_types.test_output.bed  check_overlaps.pl  chr1.61863.62160.bad_chrm_order.bed  chr1.61863.62160.bed  gh_bug_9.bed  long_reads.bam  long_reads.bam.jxs.tsv  long_reads.sam  mdnew.TCGA_BLCA_A13J.vcf.gz_cg_cov5.bw.chr1.61863.62160.bed.annotation.tsv  test.bam  test.bam.all.bw  test.bam.bai  test.bam.mosdepth.all.per-base.bw.bg  test.bam.mosdepth.all.per-base.exon_sums.tsv  test.bam.mosdepth.annotation.per-base.exon_sums.tsv  test.bam.mosdepth.bwtool.all_aucs  test.bam.mosdepth.unique.per-base.bw.bg  test.bam.mosdepth.unique.per-base.exon_sums.tsv  test.bam.names.alts.tsv  test.bam.orig.alts.tsv  test.bam.orig.frags.tsv  test.bam.orig.softclip.tsv  test.bam.read_ends.both.tsv  test.bam.read_ends.both.unique.tsv  test.cram  test.cram.coverage.tsv  test.cram.crai  test.cram.window.summed.tsv  test.sam  test.sh  test2.bam  test2.bam.all_jxs.tsv  test2.bam.jxs.tsv  test3.auc.out.tsv  test3.bam  test3.out.tsv  test_exons.bed  (+15 more)
